added sentiment, need to fix yet

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,9 @@ SLURP_PORT=
 SLURP_DATABASE=
 SLURP_USERNAME=
 SLURP_PASSWORD=
+
+SPELL_DS_HOST=
+SPELL_DS_PORT=
+SPELL_DS_DATABASE=
+SPELL_DS_USERNAME=
+SPELL_DS_PASSWORD=
